--- a/_config.yml
+++ b/_config.yml
@@ -15,12 +15,12 @@
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "en-US"
+locale                   : "kor-KOR"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
-title                    : "Site Title"
+title                    : "역학왕의 코딩"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Your Name"
+name                     : "역학왕"
 description              : "An amazing website."
 url                      : "https://mechanicsking.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
